fixing alignment

--- a/index.css
+++ b/index.css
@@ -106,7 +106,7 @@ h1 {
 
 /*about pages styles*/
 
-.box {
+.holder {
 	margin-top: 10rem;
 	margin-bottom: 12rem;
 	margin-left: 9rem;
